Not creating Global Cache twice
Former-commit-id: 19fead42ebfa98ba3b54ddcf40f10ed6aca7f2d8

--- a/UnitTestC/UnitTestC.vcxproj.filters
+++ b/UnitTestC/UnitTestC.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="InheritTest.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="runTest.c">
+    <ClCompile Include="_RUNNER_.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="rbTreeIterUnitTest.c">
