--- a/COOP/COOP.vcxproj.filters
+++ b/COOP/COOP.vcxproj.filters
@@ -21,66 +21,66 @@
     <ClInclude Include="InMemoryCache.h">
       <Filter>MemoryManagement</Filter>
     </ClInclude>
-    <ClInclude Include="dynamic_memory_management.h">
+    <ClInclude Include="DynamicMemoryManagement.h">
       <Filter>MemoryManagement</Filter>
     </ClInclude>
     <ClInclude Include="HeapCache.h">
       <Filter>MemoryManagement</Filter>
     </ClInclude>
-    <ClInclude Include="iCache.h">
+    <ClInclude Include="ICache.h">
       <Filter>MemoryManagement</Filter>
     </ClInclude>
-    <ClInclude Include="class_def_macros.h">
+    <ClInclude Include="ClassDefMacros.h">
       <Filter>OOP</Filter>
     </ClInclude>
-    <ClInclude Include="inheritence_def_macros.h">
+    <ClInclude Include="InheritenceDefMacros.h">
       <Filter>OOP</Filter>
     </ClInclude>
-    <ClInclude Include="obj_base_structs.h">
+    <ClInclude Include="ObjectBaseStructs.h">
       <Filter>OOP</Filter>
     </ClInclude>
-    <ClInclude Include="obj_lifecycle_management.h">
+    <ClInclude Include="ObjectLifecycleManagement.h">
       <Filter>OOP</Filter>
     </ClInclude>
-    <ClInclude Include="object.h">
+    <ClInclude Include="Object.h">
       <Filter>OOP</Filter>
     </ClInclude>
-    <ClInclude Include="virtual_func_calling.h">
+    <ClInclude Include="VirtualFuncCalling.h">
       <Filter>OOP</Filter>
     </ClInclude>
     <ClInclude Include="Vector.h" />
-    <ClInclude Include="Shared_ptr.h" />
-    <ClInclude Include="vectorIterator.h" />
     <ClInclude Include="redBlackTree.h" />
     <ClInclude Include="redBlackTreeIterator.h" />
-    <ClInclude Include="hashTable.h" />
     <ClInclude Include="Ndarray.h" />
+    <ClInclude Include="Shared_ptr.h">
+      <Filter>OOP</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="InMemoryCache.c">
       <Filter>MemoryManagement</Filter>
     </ClCompile>
-    <ClCompile Include="dynamic_memory_management.c">
+    <ClCompile Include="DynamicMemoryManagement.c">
       <Filter>MemoryManagement</Filter>
     </ClCompile>
     <ClCompile Include="HeapCache.c">
       <Filter>MemoryManagement</Filter>
     </ClCompile>
-    <ClCompile Include="iCache.c">
+    <ClCompile Include="ICache.c">
       <Filter>MemoryManagement</Filter>
     </ClCompile>
-    <ClCompile Include="obj_lifecycle_management.c">
+    <ClCompile Include="ObjectLifecycleManagement.c">
       <Filter>OOP</Filter>
     </ClCompile>
-    <ClCompile Include="virtual_func_calling.c">
+    <ClCompile Include="VirtualFuncCalling.c">
       <Filter>OOP</Filter>
     </ClCompile>
     <ClCompile Include="Vector.c" />
-    <ClCompile Include="Shared_ptr.c" />
-    <ClCompile Include="vectorIterator.c" />
     <ClCompile Include="redBlackTree.c" />
     <ClCompile Include="redBlackTreeIterator.c" />
-    <ClCompile Include="hashTable.c" />
     <ClCompile Include="Ndarray.c" />
+    <ClCompile Include="Shared_ptr.c">
+      <Filter>OOP</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
