RBTree refactoring, not tested, most probably not working renaming : delete-> free; destroy -> delete; new -> sometimes means alloc.

--- a/COOP/COOP.vcxproj
+++ b/COOP/COOP.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="IHashable.h" />
     <ClInclude Include="InMemoryCache.h" />
     <ClInclude Include="ClassDefMacros.h" />
     <ClInclude Include="COOP.h" />
