--- a/COOP/COOP.vcxproj.filters
+++ b/COOP/COOP.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClInclude Include="IHashable.h">
       <Filter>OOP</Filter>
     </ClInclude>
+    <ClInclude Include="UnitTestsInfra.h">
+      <Filter>Infra</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="InMemoryCache.c">
